# ocaml-imgproc

./: .gitignore  .merlin  CHANGES.md  LICENSE  Makefile  README.md  _tags  dune-project  imgproc.opam
lib/: color.ml  color.mli  dune  img_proc.ml  img_proc.mllib  img_proc_color.ml  img_proc_io.ml  img_proc_test.ml  imgio.mli  imgops.ml  imgops.mli  io.ml  io.mli  ndarray_intf.ml  ops.ml  ops.mli
test/: CHANGES.md  dune  test_color.ml  test_io.ml  test_runner.ml
